# crewai-for-Beginner

./: .gitignore  README.md  fun_fact.md  fun_fact.txt  pyproject.toml  routing_flow.html  simple_flow.html
src/flow_crewai/: __init__.py  agent_flow.py  evaluator_flow.py  orchestrator_flow.py  parallel_flow.py  prompt_chaining_flow.py  router_flow.py  simple_flow.py
